--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>CMS Detection</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-+R/98vfC2O1vQg4c8lJduKjE6U4+DztfVyUJhKUJxjKmS6j5fT/j6qg3vh/7pzJ1j9Rx9j9/E5q8+G/v/99QZUjf" crossorigin="anonymous" />
 </head>
 <body>
   <div class="container">
@@ -41,4 +42,11 @@
     </div>
   </div>
 </body>
+<footer>
+  <p>Copyright ©2023 Daynis Olman</p>
+  <div class="github-links">
+    <a href="https://github.com/daynis-olman/cms-detection-app"><i class="fa fa-github" aria-hidden="true"></i> Star on GitHub</a>
+  </div>
+</footer>
+
 </html>
