--- a/index.html
+++ b/index.html
@@ -1,52 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CMS Detection</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>CMS Detection App</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="container">
-    <div class="card">
-      <h1>CMS Detection</h1>
-      <form method="post" action="submit.php">
-        <label for="url">Enter URL:</label>
-        <input type="text" id="url" name="url">
-        <input type="submit" value="Submit">
-      </form>
-
-      <div id="modal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <p id="output"></p>
-        </div>
-      </div>
-
-      <script>
-        var modal = document.getElementById("modal");
-        var btn = document.getElementById("submit");
-        var span = document.getElementsByClassName("close")[0];
-        btn.onclick = function() {
-            modal.style.display = "block";
-        }
-        span.onclick = function() {
-            modal.style.display = "none";
-        }
-        window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-      </script>
+    <h1>CMS Detection App</h1>
+    <form id="form" action="#" method="post">
+      <input type="text" name="url" placeholder="Enter a URL">
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close-modal">&times;</span>
+      <p>Name: <span id="name"></span></p>
+      <p>Version: <span id="version"></span></p>
     </div>
   </div>
-</body>
-<footer>
-  <p>Copyright ©2023 Daynis Olman</p>
-  <div class="github-links">
-    <a href="https://github.com/daynis-olman/cms-detection-app"><i class="fa fa-github" aria-hidden="true"></i> Star on GitHub</a>
-  </div>
-</footer>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function(){
+    // Attach a submit event listener to the form
+    $('#form').submit(function(event) {
+        event.preventDefault();
+        // Get the input URL
+        var url = $('input[name="url"]').val();
+        // Send a post request to the submit.php
+        $.post('submit.php', {url: url}, function(data) {
+            // Update the modal content with the returned data
+            $('#name').text(data.name);
+            $('#version').text(data.version);
+            // Show the modal
+            $('#modal').show();
+        });
+    });
+    // Attach a click event listener to the close button
+    $('.close-modal').click(function() {
+        // Hide the modal
+        $('#modal').hide();
+    });
+  });
+</script>
+  </body>
 </html>
