Added Axios library

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>CMS Detection</title>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
 
